Testing - Refactored queryResources to make it flow better. - Created a test class for the SpigetFacade including an elementary test for queryResources(). - Created a ChatColor class which functions similarly to org.bukkit.ChatColor except it uses ANSI color codes when Bukkit isn't present. - Added a fallback to output AutoUpdater.console() to STDOUT when Bukkit isn't present.